Project

General

Profile

Actions

Bug #42938

closed

mds: free heap memory may grow too large for some workloads

Added by Patrick Donnelly over 4 years ago. Updated almost 4 years ago.

Status:
Resolved
Priority:
Urgent
Category:
-
Target version:
% Done:

0%

Source:
Development
Tags:
Backport:
nautilus,mimic
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Component(FS):
MDS
Labels (FS):
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

MDS should periodically release heap free space to the kernel as part of cache trimming.


Related issues 2 (0 open2 closed)

Copied to CephFS - Backport #42942: mimic: mds: free heap memory may grow too large for some workloadsRejectedActions
Copied to CephFS - Backport #42943: nautilus: mds: free heap memory may grow too large for some workloadsResolvedPatrick DonnellyActions
Actions #1

Updated by Patrick Donnelly over 4 years ago

  • Pull request ID set to 31793
Actions #2

Updated by Patrick Donnelly over 4 years ago

  • Status changed from In Progress to Pending Backport
Actions #3

Updated by Patrick Donnelly over 4 years ago

  • Copied to Backport #42942: mimic: mds: free heap memory may grow too large for some workloads added
Actions #4

Updated by Patrick Donnelly over 4 years ago

  • Copied to Backport #42943: nautilus: mds: free heap memory may grow too large for some workloads added
Actions #5

Updated by Nathan Cutler almost 4 years ago

  • Status changed from Pending Backport to Resolved

While running with --resolve-parent, the script "backport-create-issue" noticed that all backports of this issue are in status "Resolved" or "Rejected".

Actions

Also available in: Atom PDF